# RillFlow

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATIONS.md  README.md  RILLFLOW_MVP_SPEC.md  UPCASTING.md
.github/workflows/: ci.yml
benches/: upcasting.rs
docs/: archive_ops.md  hotcold_daemon_ops.md
examples/: projection_run_once.rs  quickstart.rs  session_defaults.rs  upcasting.rs
sql/: 0001_init.down.sql  0001_init.sql  0002_hotcold_daemon.down.sql  0002_hotcold_daemon.sql  0003_event_archiving.down.sql  0003_event_archiving.sql  0004_event_archiving_partitioning.down.sql  0004_event_archiving_partitioning.sql  0005_event_partitioning.down.sql  0005_event_partitioning.sql
src/: aggregates.rs  batch.rs  context.rs  documents.rs  error.rs  events.rs  lib.rs  live.rs  metrics.rs  projection_runtime.rs  projections.rs  schema.rs  snapshotter.rs  store.rs  subscriptions.rs  testing.rs  tracing.rs
src/query/: mod.rs
src/upcasting/: mod.rs
tests/: aggregate_repo.rs  batch_writer.rs  custom_projection.rs  documents_patch.rs  documents_repo.rs  duplicated_fields.rs  envelopes.rs  idempotency.rs  inline_projections.rs  integration_postgres.rs  live_aggregations.rs  multistream_adapter.rs  projection_run_loop.rs  projection_runtime.rs  query_fts_and_batch.rs  query_includes_aggregates.rs  query_includes_ordering.rs  query_includes_paging.rs  query_multi_includes.rs  snapshots.rs  snapshotter.rs  stream_aliases.rs  subscriptions.rs  upcaster_derive.rs  upcasting.rs  view_projection.rs
upcasting_derive/: Cargo.toml
upcasting_derive/src/: lib.rs
