[package]
name = "rillflow"
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
description = "Rillflow — a lightweight document + event store for Rust, powered by Postgres."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordcodes/rillflow"
documentation = "https://docs.rs/rillflow"
readme = "README.md"
keywords = ["postgres", "event-sourcing", "jsonb", "cqrs", "database"]
categories = ["database", "asynchronous", "data-structures"]
include = [
    "Cargo.toml",
    "README.md",
    "MIGRATIONS.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "sql/**",
    "src/**",
    "examples/**",
    "tests/**",
]

[features]
default = ["postgres"]
postgres = []
tracing-dashboard = []

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
tracing = "0.1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
indoc = "2"
itertools = "0.13"

[dev-dependencies]
testcontainers = "0.25.0"
anyhow = "1"
