[package]
name = "rillflow"
version = "0.1.0-alpha.8"
edition = "2024"
rust-version = "1.85"
description = "Rillflow — a lightweight document + event store for Rust, powered by Postgres."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jordcodes/rillflow"
documentation = "https://docs.rs/rillflow"
readme = "README.md"
keywords = ["postgres", "event-sourcing", "jsonb", "cqrs", "database"]
categories = ["database", "asynchronous", "data-structures"]
include = [
    "Cargo.toml",
    "README.md",
    "MIGRATIONS.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "sql/**",
    "src/**",
    "examples/**",
    "tests/**",
]

[features]
default = ["postgres"]
otel = [
    "dep:tracing-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tonic",
]
postgres = []
tracing-dashboard = []
cli = ["dep:clap"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "macros",
    "chrono",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.12", features = [
    "grpc-tonic",
], optional = true }
tonic = { version = "0.11", default-features = false, features = [
    "transport",
], optional = true }
async-trait = "0.1"
clap = { version = "4", features = ["derive"], optional = true }
indoc = "2"
itertools = "0.13"
jsonschema = "0.33"

[[bin]]
name = "rillflow"
path = "src/bin/rillflow.rs"
required-features = ["cli"]

[[example]]
name = "session_defaults"
path = "examples/session_defaults.rs"

[dev-dependencies]
testcontainers = "0.25.0"
anyhow = "1"
